[gd_scene load_steps=21 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/assets/light_mask.png" type="Texture" id=3]
[ext_resource path="res://player/assets/call.png" type="Texture" id=4]
[ext_resource path="res://boid/fish_types/round_fish.tscn" type="PackedScene" id=5]
[ext_resource path="res://vfx/assets/bubble.png" type="Texture" id=6]
[ext_resource path="res://vfx/bubble_particle.tscn" type="PackedScene" id=7]
[ext_resource path="res://player/light.gd" type="Script" id=8]
[ext_resource path="res://vfx/call_anim.anim" type="Animation" id=9]
[ext_resource path="res://audio/SoundEffect.tscn" type="PackedScene" id=10]
[ext_resource path="res://audio/sfx/call.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/sfx/swoosh.wav" type="AudioStream" id=12]
[ext_resource path="res://audio/ambience/water_2.ogg" type="AudioStream" id=13]
[ext_resource path="res://audio/ambience/water_1.ogg" type="AudioStream" id=14]

[sub_resource type="CircleShape2D" id=1]
radius = 150.0

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

void fragment() {
	vec4 current_color = texture(TEXTURE, UV);
	vec4 screen_color = texture(SCREEN_TEXTURE, SCREEN_UV);
	COLOR.rgb = (current_color + screen_color).rgb;
	COLOR.a = current_color.a;
}
"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.611651, 0.809091 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.318182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.0629371, 0.447552, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 0.752941, 0.898039, 1, 0.552941, 1, 1, 1, 0.341176, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=6]
radius = 35.0

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
boid_scene = ExtResource( 5 )

[node name="BoidCenter" type="Node2D" parent="."]

[node name="CallArea" type="Area2D" parent="BoidCenter"]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoidCenter/CallArea"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="BoidCenter/CallArea"]
modulate = Color( 1, 1, 1, 0 )
light_mask = 0
material = SubResource( 3 )
scale = Vector2( 1e-05, 1e-05 )
z_index = 5
texture = ExtResource( 4 )

[node name="CPUParticles2D" parent="BoidCenter" instance=ExtResource( 7 )]

[node name="CPUParticles2D2" type="CPUParticles2D" parent="BoidCenter"]
modulate = Color( 1, 1, 1, 0.305882 )
emitting = false
lifetime = 2.0
one_shot = true
local_coords = false
texture = ExtResource( 6 )
emission_shape = 1
emission_sphere_radius = 95.39
gravity = Vector2( 0, -60 )
scale_amount = 0.28
scale_amount_random = 0.57
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.333333 )
texture = ExtResource( 1 )

[node name="Target" type="Node2D" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CallTimer" type="Timer" parent="."]
wait_time = 1.7
one_shot = true

[node name="CallBuffer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/call = ExtResource( 9 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )
color = Color( 0.129412, 0.52549, 0.588235, 1 )
range_layer_min = -10
range_layer_max = 10
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
script = ExtResource( 8 )

[node name="AmbientParticles" type="CPUParticles2D" parent="."]
modulate = Color( 0.52549, 0.8, 1, 0.105882 )
amount = 55
lifetime = 2.0
speed_scale = 0.25
local_coords = false
texture = ExtResource( 6 )
emission_shape = 2
emission_rect_extents = Vector2( 1920, 1080 )
gravity = Vector2( 0, -60 )
scale_amount = 3.0
scale_amount_random = 0.57
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="CallSound" parent="." instance=ExtResource( 10 )]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="AttackSound" parent="." instance=ExtResource( 10 )]
stream = ExtResource( 12 )
volume_db = -5.0

[node name="WaterSound" parent="." instance=ExtResource( 10 )]
stream = ExtResource( 13 )
volume_db = 5.0
autoplay = true

[node name="WaterSound2" parent="." instance=ExtResource( 10 )]
stream = ExtResource( 14 )
volume_db = -2.989
autoplay = true
[connection signal="area_entered" from="BoidCenter/CallArea" to="." method="_on_call_area_area_entered"]
[connection signal="body_entered" from="BoidCenter/CallArea" to="." method="_on_call_area_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
